@@ -182,15 +182,18 @@ enum LIBFDATETIME_INPUT_ERROR
 	 */
 	LIBFDATETIME_INPUT_ERROR_SIGNATURE_MISMATCH		= 2,
 
-	/* A CRC in the input did not match
+	/* A checksum in the input did not match
 	 */
-	LIBFDATETIME_INPUT_ERROR_CRC_MISMATCH			= 3,
+	LIBFDATETIME_INPUT_ERROR_CHECKSUM_MISMATCH		= 3,
 
 	/* A value in the input did not match a previously
 	 * read value or calculated value
 	 */
 	LIBFDATETIME_INPUT_ERROR_VALUE_MISMATCH			= 4
 };
+
+/* TODO deprecated remove after a while */
+#define LIBFDATETIME_INPUT_ERROR_CRC_MISMATCH			LIBFDATETIME_INPUT_ERROR_CHECKSUM_MISMATCH
 
 /* The memory error codes
  * to signify errors regarding memory
